fluid-system/maestro/maestro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluid-maestro
  namespace: fluid-system
spec:
  type: ClusterIP
  selector:
    app: fluid-maestro
  ports:
    - protocol: TCP
      port: 4000
      name: http
      targetPort: 4000
    - protocol: TCP
      port: 4001
      name: special
      targetPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: fluid-grpc
  namespace: fluid-system
spec:
  type: LoadBalancer
  selector:
    app: fluid-maestro
  ports:
    - protocol: TCP
      port: 50051
      name: grpc
      targetPort: 50051
  loadBalancerIP: 100.67.0.252
