fluid-system/maestro/maestro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maestro
  namespace: fluid-system
spec:
  rules:
    - host: maestro.cluster.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: fluid-maestro
                port:
                  number: 4000
